# klipp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  overlay.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: OVERLAY-SPEC.md  OVERLAY-TODO.md
docs/architecture/: 01-konvajs-canvas-choice.md  02-ffmpeg-auto-downloader.md  README.md
docs/plans/: 01-webcam-position-cycling.md  02-recording-region-outline.md  03-microphone-audio-recording.md  04-phase-6-region-sizing-and-dpi.md  05-timeout-investigation.md  06-pill-buttons-blocked-by-overlay.md  07-stop-recording-hotkey.md  08-webview-content-drift-root-cause.md  09-window-capture-mode.md  10-ffmpeg-proactive-first-run-ux.md  11-webview2-permission-intercept.md  12-compact-pill-launch-mode.md  13-recording-file-size-optimization.md  README.md  STATUS.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json
src-tauri/src/: lib.rs  main.rs  settings.rs  tray.rs
src-tauri/src/capture/: mod.rs  win32.rs
src-tauri/src/commands/: capture.rs  clipboard.rs  ffmpeg.rs  file_io.rs  mod.rs  mouse_hook.rs  overlay.rs  permissions.rs  pill_menu.rs  post_process.rs  recording.rs  settings.rs
src/hooks/: useCameraPermission.ts  useGlobalShortcut.ts  useMediaPermission.ts  useRecordFlow.ts  useTauriCommand.ts
src/lib/: constants.ts  export.ts
src/overlay/: OverlayApp.tsx  main.tsx
src/stores/: canvasStore.ts  captureStore.ts  uiStore.ts  (+5 more)
(+27 files in other folders)
